# gammu

./: .arch-inventory  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .weblate  AUTHORS  BUGS  CMakeLists.txt  COPYRIGHT  CTestConfig.cmake  ChangeLog  Code.dsw  Code.ncb  Code.opt  INSTALL  INSTALL.cs  INSTALL.da  INSTALL.de  INSTALL.en_GB  INSTALL.es  INSTALL.et  INSTALL.fi  INSTALL.fr  INSTALL.he  INSTALL.id  INSTALL.it  INSTALL.nb_NO  INSTALL.pl  INSTALL.pt_BR  INSTALL.ru  INSTALL.sv  INSTALL.tr  INSTALL.uk  Makefile  Makefile.global.in  Note.doc  PORTING  README  (+46 more)
cfg/autoconf/: .arch-inventory  Makefile.cfg.in  acconfig.h  aclocal.m4  config.h.in  configure.in
common/: CMakeLists.txt  Makefile  api.c  config.h  debug.c  debug.h  gammu.h  gsm-api.c  gsm-bitmaps.c  gsm-calendar.c  gsm-coding.c  gsm-datetime.c  gsm-networks.c  gsm-phonebook.c  gsm-ringtones.c  gsm-sms.c  gsm-wap.c  gsmcomon.c  gsmcomon.h  gsmerror.h  gsmphones.c  gsmphones.h  gsmstate.c  gsmstate.h  misc.c
common/data/: at-emulator.c  datapump.c  rlp-common.c  rlp-crc24.c  virtmodem.c
common/device/: Makefile  devfunc.c  devfunc.h
common/devices/: device.c  tekram.c  unixirda.c  unixserial.c  winserial.c
common/files/: cfgreader.c  gsm-filetypes.c  midifile.c
common/misc/: Makefile  cfg.c  cfg.h  coding.c  coding.h  locales.h  misc.c  misc.h
common/newmodules/: n3110.c  n6110.c  n7110.c  newat.c
common/phone/: pfunc.c  pfunc.h
common/protocol/: at.c  fbus.c  fbus3110.c  fbusirda.c  mbus.c  protocol.h
common/service/: gsmback.c  gsmback.h  gsmcal.c  gsmcal.h  gsmcall.h  gsmdata.c  gsmdata.h  gsmlogo.c  gsmlogo.h  gsmmisc.c  gsmmisc.h  gsmmms.c  gsmmms.h  gsmnet.c  gsmnet.h  gsmpbk.c  gsmpbk.h  gsmprof.h  gsmring.c  gsmring.h  gsmsms.c  gsmsms.h  gsmvcal.c  gsmvcal.h  gsmwap.c  gsmwap.h
contrib/: CMakeLists.txt  COPYING  README  addpostflight
contrib/bash-completion/: gammu
contrib/conversion/: kaddressbook
contrib/convert/: CMakeLists.txt  makeconverttable.c
contrib/coveragehelper/: CMakeLists.txt  coveragehelper.c  merge-cobertura.py  split-codecov.py
contrib/cpp-sample/: CMakeLists.txt  gammu.cc  smsd.cc
contrib/init/: gammu-smsd.lsb  gammu-smsd.rh  gammu-smsd.service
contrib/media/: axelf.txt
contrib/packaging/: README.Debian
contrib/proxy/: README  gammu-backend
contrib/s60/: .gitignore  create_package  default.py  gammu-s60-remote-sign.sis  gammu-s60-remote.sis  series60-remote-sign.sis  series60-remote.sis  status_numbers.py
contrib/sms/: charset.txt  convert.txt
contrib/sms-gammu2android/: README  sms-gammu2android
contrib/smscgi/: CMakeLists.txt  Makefile  README  sms_cgi.c  sms_cgi.h  smsd.c
contrib/smsd-scripts/: receive-exec  receive-files  receive-mms  receive-python  sms-commands
contrib/sql/: poll-trigger.sql
contrib/sqlreply/: CMakeLists.txt  autoreply.php  autoreply.sql  config.dist.php
contrib/symbian/: readme.txt
contrib/testing/: gammu-test.sh
contrib/udev/: 45-nokiadku2.rules  69-gammu-acl.rules
contrib/usbsnoop/: decode.py  decodexml.py
docs/develop/: CMakeLists.txt  Gammu.htm  (+7 more)
gammu/: .arch-inventory  CMakeLists.txt  CMakeTests.txt  backup.c  backup.h  backupsms.c  calendar.c  calendar.h  common.c  common.h  dct3.c  dct3.h  dct4.c  dct4.h  files.c  files.h  formats.h  gammu.c  gammu.h  index.html  memory.c  memory.h  message.c  message.h  misc.c  misc.h  mms.c  nokia.c  nokia.h  search.c  search.h  sniff.c  sniff.h  test-incoming.sh.in
gammu-detect/: CMakeLists.txt  bluez.c  bluez.h  config.h.in  main.c  main.h  udev.c  udev.h  win32-serial.c  win32-serial.h
helper/: CMakeLists.txt  README  array.c  cmdline.c  cmdline.h  formats.h  locales.h  memory-display.c  memory-display.h  message-cmdline.c  message-cmdline.h  message-display.c  message-display.h  printing.c  printing.h  string.c  string.h  strptime.c  strptime.h  tzfile.h  win32-dirent.c  win32-dirent.h
include/: CMakeLists.txt  config.h  config.h.in.in  gammu-backup.h  gammu-bitmap.h  gammu-calendar.h  gammu-call.h  gammu-callback.h  gammu-category.h  gammu-config.h  gammu-datetime.h  gammu-debug.h  gammu-error.h  gammu-file.h  gammu-info.h  gammu-inifile.h  gammu-keys.h  gammu-limits.h  gammu-memory.h  gammu-message.h  gammu-misc.h  gammu-nokia.h  gammu-ringtone.h  gammu-security.h  gammu-settings.h  gammu-smsd.h  gammu-statemachine.h  gammu-types.h  gammu-unicode.h  gammu-wap.h  gammu.h  gsm-api.h  gsm-bitmaps.h  gsm-calendar.h  gsm-coding.h  gsm-common.h  gsm-datetime.h  gsm-networks.h  gsm-phonebook.h  gsm-ringtones.h  (+4 more)
libgammu/: CMakeLists.txt  api.c  debug.c  debug.h  gsmcomon.c  gsmphones.c  gsmreply.h  gsmstate.c  gsmstate.h
python/: CMakeLists.txt  CMakeTests.txt  ChangeLog  INSTALL  MANIFEST.in  MakeFakeWin.sh  Makefile  convertors.h  errors.c  errors.h  gammu.c  index.html  misc.c  misc.h  python-gammu.spec  setup.py
smsd/: CMakeLists.txt  CMakeTests.txt  common.h  core.c  core.h  gammu-smsd.h  inject.c  log-event.c  log-event.h  log.h  main.c  monitor.c  pidfile.c  pidfile.h  run.html  s_files.c  s_mysql.c  s_pgsql.c  service.c  service.h  smsd-event.mc  smsdcore.c  smsdcore.h  tables.html  test-smsd-files-include.sh  test-smsd-files-include.sh.in  test-smsd-files.sh  test-smsd.sh  test-smsd.sh.in  uid.c  uid.h  usage.html  winservice.c  winservice.h
tests/: CMakeLists.txt  array-test.c  at-ccfc-reply.c  at-cfun-corrupted.c  at-charset.c  at-cnmi-reply.c  at-creg-corner-case.c  at-creg-reply.c  at-dispatch.c  at-get-smsmemories.c  at-getmemory-reply.c  at-motorola.c  at-parser.c  at-samsung.c  at-statemachine.c  at-ussd-reply.c  at-zte-mf710m-echo.c  backup-comment.c  base64.c  bluetooth_checkservicename.c  cal-read.c  common.h  config.c  debug.c  dump-error-codes.c  dump-features.c  features-parsing.c  gen-include-test.sh  gen_sms_tests.py  get-model-at.c  get-smsc-at.c  getint.c  include-backup.c  include-bitmap.c  include-calendar.c  include-call.c  include-callback.c  include-category.c  include-datetime.c  include-debug.c  (+69 more)
utils/: CMakeLists.txt  Makefile  gammu-config  jadmaker  mgnokiidev.c  sendsms  todologo
(+4260 files in other folders)
